k8s/otel-cluster/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # Tells the AWS Load Balancer Controller to provision an Application Load Balancer (ALB)
    kubernetes.io/ingress.class: alb
    
    # Expose the ALB to the public internet
    alb.ingress.kubernetes.io/scheme: internet-facing
    
    # Direct routing to pod IP (requires VPC CNI, standard in EKS)
    alb.ingress.kubernetes.io/target-type: ip
    
    # Set listen ports
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm
                port:
                  number: 3000
